--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,7 +8,8 @@
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-    src: url("/fonts/Source_Sans_3-normal-latin_ext.woff2") format("woff2");
+    src: url("/assets/fonts/Source_Sans_3-normal-latin_ext.woff2")
+      format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
       U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
@@ -17,7 +18,7 @@
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-    src: url("/fonts/Source_Sans_3-normal-latin.woff2") format("woff2");
+    src: url("/assets/fonts/Source_Sans_3-normal-latin.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
       U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
       U+2215, U+FEFF, U+FFFD;
@@ -28,7 +29,8 @@
     font-weight: 400;
     font-style: italic;
     font-display: swap;
-    src: url("/fonts/Source_Sans_3-italic-latin_ext.woff2") format("woff2");
+    src: url("/assets/fonts/Source_Sans_3-italic-latin_ext.woff2")
+      format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
       U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
@@ -38,7 +40,7 @@
     font-weight: 400;
     font-style: italic;
     font-display: swap;
-    src: url("/fonts/Source_Sans_3-italic-latin.woff2") format("woff2");
+    src: url("/assets/fonts/Source_Sans_3-italic-latin.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
       U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
       U+2215, U+FEFF, U+FFFD;
@@ -49,7 +51,8 @@
     font-weight: 600;
     font-style: normal;
     font-display: swap;
-    src: url("/fonts/Source_Sans_3-normal-latin_ext.woff2") format("woff2");
+    src: url("/assets/fonts/Source_Sans_3-normal-latin_ext.woff2")
+      format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
       U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
@@ -58,7 +61,7 @@
     font-weight: 600;
     font-style: normal;
     font-display: swap;
-    src: url("/fonts/Source_Sans_3-normal-latin.woff2") format("woff2");
+    src: url("/assets/fonts/Source_Sans_3-normal-latin.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
       U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
       U+2215, U+FEFF, U+FFFD;
@@ -320,7 +323,7 @@
 
   p > a {
     text-decoration-thickness: 0.0875rem;
-    text-decoration-color: var(--navds-global-color-gray-400);
+    text-underline-offset: 0.125em;
   }
 }
 @layer components {
@@ -332,10 +335,7 @@
   }
   :where(.markdown) > p a {
     text-decoration: underline;
-    text-decoration-thickness: 0.0625em;
-    text-decoration-color: var(--navds-global-color-gray-400);
     color: var(--navds-global-color-blue-500);
-    text-underline-offset: 0.1875em;
   }
   :where(.markdown) > p a:hover {
     text-decoration: none;
@@ -354,6 +354,10 @@
   }
   :where(.markdown) li + li {
     margin-block-start: 0.5rem;
+  }
+
+  .dashed-svg {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='100%25' height='100%25' fill='none' stroke='%23b0b0b0' stroke-dasharray='6 5' rx='8' stroke-width='4'/%3E%3C/svg%3E");
   }
 }
 @layer utilities {
