--- a/src/pages/forsiden/forsiden.njk
+++ b/src/pages/forsiden/forsiden.njk
@@ -1,9 +1,9 @@
 ---
 title: 'Forside'
 description: 'Lenker til de viktigste områdene + utvalgte snarveier.'
-tags:
-  - template
+tags: ['template']
 order: 1
+permalink: '/index.html'
 ---
 {% extends 'base.njk' %}
 
