--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      {% if title %}
-        {{ title | safe }} &ndash;
-    {% endif %}
+      {{ title | safe }}
+      {{ '&ndash;' | safe if title }}
       {{ site.title | safe }}
     </title>
     <meta name="description" content="..." />
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>" />
     <link rel="preconnect" href="https://marvelous-biscochitos-50396c.netlify.app" crossorigin />
-    <link rel="preload" href="/fonts/Source_Sans_3-normal-latin.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="stylesheet" href="/main.min.css" type="text/css" />
+    <link rel="preload" href="/assets/fonts/Source_Sans_3-normal-latin.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />
+
     {% block styles %}{% endblock %}
-    <script src="/main.min.js" type="text/javascript" defer></script>
+    <script src="/assets/main.min.js" type="text/javascript" defer></script>
     {% block script %}{% endblock %}
   </head>
   <body
