--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -30,22 +30,12 @@
       notifyOpen: false
     }">
 
-    <div class="font-mono text-2xl text-white bg-blue-700 md:text-3xl">
-      <div class="grid overflow-hidden transition-all duration-200 grid-cols-layout" x-bind:class="indexOpen ? 'max-h-[60vh]' : 'max-h-0'">
-        <ul class="py-3 divide-y md:py-6 divide-blue-300/25 col-popout">
-        {% for page in collections.template | sort(false, false, 'data.order') %}
-          <li class="py-4">
-            <a href="{{ page.url }}" class="hover:text-orange-300 hover:underline decoration-from-font underline-offset-4">
-              <span class="w-5">{{ '0' if page.data.order < 10 }}{{ page.data.order }}</span>
-            {{ page.data.title | safe }}
-            </a>
-          </li>
-        {% endfor %}
-        </ul>
-      </div>
-    </div>
+    {% include "partials/prototypeNav.njk" %}
+    <div class="relative z-10 transition-transform duration-150 ease-out bg-white" x-bind:class="indexOpen ? 'translate-y-[80vh]' : 'translate-y-0'" x-on:click.outside="indexOpen = false">
     {% include "partials/header.njk" %}
+    {% include "partials/banner.njk" %}
     {% block content %}{% endblock %}
     {% include "partials/footer.njk" %}
+    </div>
   </body>
 </html>
