Fjerne _site fra git

--- a/src/pages/forsiden/forsiden.njk
+++ b/src/pages/forsiden/forsiden.njk
@@ -70,7 +70,7 @@ permalink: '/index.html'
       </div>
     </div>
 
-    <div class="grid py-8 pb-12 bg-white grid-cols-layout md:py-12">
+    <div class="grid py-8 pb-12 bg-white grid-cols-layout md:pt-12 md:pb-20">
       <div class="col-popout">
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Kontakt oss</h2>
         <div class="grid gap-8 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
