Endrer til mer fiktivt navn og legger inn shutdown-handler for server

--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -8,7 +8,7 @@
         <div class="grid flex-auto row-start-1 p-4 -mx-2 rounded-lg md:col-start-3 md:row-span-2 bg-deepblue-50 md:p-6 md:-mx-6">
           <h3 class="grid">
             <span class="text-sm tracking-wider uppercase opacity-70">Logget inn som</span>
-            <span class="text-2xl font-semibold leading-tight">Isac Norland</span>
+            <span class="text-2xl font-semibold leading-tight">Fjong Vindelbro</span>
           </h3>
 
           <div class="pt-6">
