--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -77,7 +77,7 @@
       }
     </style>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>" />
-    <link rel="preconnect" href="https://marvelous-biscochitos-50396c.netlify.app" crossorigin />
+    <link rel="preconnect" href="https://www.nav.no" crossorigin />
     <link rel="preload" href="{{ env.sitePath }}/assets/fonts/Source_Sans_3-normal-latin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="{{ env.sitePath }}/assets/main.min.css" type="text/css" />
 
