Teste uten variabel for pathprefix

--- a/src/pages/artikkel/artikkel.njk
+++ b/src/pages/artikkel/artikkel.njk
@@ -39,7 +39,7 @@ bodyClass: 'bg-gray-100'
           <p class="mt-7">– De høye strømprisene vi har sett de siste månedene har så langt ikke resultert i noen økning i antallet permitterte, sier Holte.</p>
 
           <figure class="grid gap-3 p-3 bg-white shadow-sm mt-7">
-            <img src="{{ env.sitePath }}/images/artikkel-figur-1.webp" alt="" width="768" height="430">
+            <img src="/images/artikkel-figur-1.webp" alt="" width="768" height="430">
             <figcaption class="text-base text-gray-700">
               <p>
                 <strong>Figur 1:</strong> Utvikling i antall helt ledige, delvis ledige, summen av helt ledige og arbeidssøkere på tiltak, samt antall arbeidssøkere i alt per måned. Sesong- og bruddjusterte tall.</p>
@@ -48,7 +48,7 @@ bodyClass: 'bg-gray-100'
           </figure>
 
           <figure class="grid gap-3 p-3 bg-white shadow-sm mt-7">
-            <img src="{{ env.sitePath }}/images/artikkel-figur-2.webp" alt="" width="768" height="430">
+            <img src="/images/artikkel-figur-2.webp" alt="" width="768" height="430">
             <figcaption class="text-base text-gray-700">
               <p>
                 <strong>Figur 2:</strong> Utvikling i andel helt ledige, delvis ledige, summen av helt ledige og arbeidssøkere på tiltak, samt arbeidssøkere i alt per måned. Prosent av arbeidsstyrken. Sesong- og bruddjusterte tall.</p>
