--- a/src/pages/produktoversikt/entry.njk
+++ b/src/pages/produktoversikt/entry.njk
@@ -23,7 +23,7 @@
   <main class="min-h-[50vh]">
     <div class="grid grid-cols-layout">
       <div class="pt-12 pb-8 col-content">
-        <a href="{{ env.sitePath }}/produktoversikt" class="font-semibold tracking-wide text-blue-500 uppercase hover:underline">Søknad og skjema fra A til Å</a>
+        <a href="/produktoversikt" class="font-semibold tracking-wide text-blue-500 uppercase hover:underline">Søknad og skjema fra A til Å</a>
         <h1 class="mt-1 text-5xl font-semibold">{{ product.title | safe }}</h1>
         {% if ingress %}
         <div class="mt-4 text-lg max-w-prose">
