--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,7 +17,7 @@
         font-weight: 400;
         font-style: normal;
         font-display: swap;
-        src: url("/assets/fonts/Source_Sans_3-normal-latin_ext.woff2")
+        src: url("{{ '/assets/fonts/Source_Sans_3-normal-latin_ext.woff2' | htmlBaseUrl }}")
           format("woff2");
         unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
           U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
@@ -27,7 +27,7 @@
         font-weight: 400;
         font-style: normal;
         font-display: swap;
-        src: url("/assets/fonts/Source_Sans_3-normal-latin.woff2") format("woff2");
+        src: url("{{ '/assets/fonts/Source_Sans_3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
           U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
           U+2215, U+FEFF, U+FFFD;
@@ -38,7 +38,7 @@
         font-weight: 400;
         font-style: italic;
         font-display: swap;
-        src: url("/assets/fonts/Source_Sans_3-italic-latin_ext.woff2")
+        src: url("{{ '/assets/fonts/Source_Sans_3-italic-latin_ext.woff2' | htmlBaseUrl }}")
           format("woff2");
         unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
           U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
@@ -49,7 +49,7 @@
         font-weight: 400;
         font-style: italic;
         font-display: swap;
-        src: url("/assets/fonts/Source_Sans_3-italic-latin.woff2") format("woff2");
+        src: url("{{ '/assets/fonts/Source_Sans_3-italic-latin.woff2' | htmlBaseUrl }}") format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
           U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
           U+2215, U+FEFF, U+FFFD;
@@ -60,7 +60,7 @@
         font-weight: 600;
         font-style: normal;
         font-display: swap;
-        src: url("/assets/fonts/Source_Sans_3-normal-latin_ext.woff2")
+        src: url("{{ '/assets/fonts/Source_Sans_3-normal-latin_ext.woff2' | htmlBaseUrl }}")
           format("woff2");
         unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
           U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
@@ -70,7 +70,7 @@
         font-weight: 600;
         font-style: normal;
         font-display: swap;
-        src: url("/assets/fonts/Source_Sans_3-normal-latin.woff2") format("woff2");
+        src: url("{{ '/assets/fonts/Source_Sans_3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
           U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
           U+2215, U+FEFF, U+FFFD;
