--- a/src/pages/produktoversikt/produktoversikt.njk
+++ b/src/pages/produktoversikt/produktoversikt.njk
@@ -42,8 +42,8 @@ bodyClass: ''
         history.pushState(null, document.title, url.toString());
       });
       updateCount()">
-    <div class="grid py-8 bg-white grid-cols-layout md:py-12">
-      <div class="relative col-popout">
+    <div class="grid py-8 bg-white grid-cols-layout md:pt-12">
+      <div class="relative col-content">
 
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">Søknad og skjema fra A&nbsp;til&nbsp;Å</h1>
 
@@ -95,7 +95,7 @@ bodyClass: ''
     </div>
 
     <div class="grid pt-8 pb-24 bg-gray-100 grid-cols-layout md:pt-12 min-h-[25vh]">
-      <div class="grid items-start gap-8 md:gap-16 md:grid-cols-10 col-popout">
+      <div class="grid items-start gap-8 md:gap-16 md:grid-cols-10 col-content">
 
         {# <div>
           <label for="searchFilter" class="font-semibold">Søk</label>
