--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,6 +1,6 @@
 <div class="fixed w-full h-screen overflow-y-auto font-mono text-2xl text-white bg-blue-700 bg-gradient-to-t from-transparent to-blue-600/50 md:text-3xl">
   <div class="grid grid-cols-layout">
-    <ul class="py-3 divide-y md:py-6 divide-blue-300/25 col-popout">
+    <ul class="py-3 divide-y md:py-6 divide-blue-300/25 col-content">
     {% for page in collections.template | sort(false, false, 'data.order') %}
       <li class="py-4">
         <a href="{{ page.url }}" class="hover:text-orange-300 hover:underline decoration-from-font underline-offset-4">
