--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -1,22 +1,22 @@
-{% macro button(text, variant, class) %}
+{% macro button(params) %}
 
   {% set buttonClasses = "bg-white border-2 border-blue-500 text-blue-600" %}
 
-  {% if variant %}
-    {% if variant === "primary" %}
-      {% set buttonClasses = "bg-blue-500 text-white" %}
+  {% if params.variant %}
+    {% if params.variant === "primary" %}
+      {% set variant = "bg-blue-500 text-white" %}
     {% endif %}
 
-    {% if variant === "secondary" %}
-      {% set buttonClasses = "bg-white border-2 border-blue-500 text-blue-600" %}
+    {% if params.variant === "secondary" %}
+      {% set variant = "bg-white text-blue-600" %}
     {% endif %}
 
-    {% if variant === "tertiary" %}
-      {% set buttonClasses = "bg-blue-50 text-blue-600" %}
+    {% if params.variant === "tertiary" %}
+      {% set variant = "bg-blue-50 text-blue-600" %}
     {% endif %}
   {% endif %}
 
-  <a href="#" class="inline-flex items-center gap-2 px-4 py-2.5 no-underline rounded font-semibold leading-tight text-center justify-center {{ buttonClasses }} {{ class }}">
-    <span>{{ text | safe }}</span>
+  <a href="#" class="inline-flex items-center gap-2 px-6 py-2.5 no-underline rounded font-semibold leading-tight text-center justify-center {{ params.class }} {{ variant }}">
+    <span>{{ params.text | safe }}</span>
   </a>
 {% endmacro %}
