--- a/src/pages/produktoversikt/entry.njk
+++ b/src/pages/produktoversikt/entry.njk
@@ -15,15 +15,17 @@
   }
 }
 ---
-
 {% extends 'base.njk' %}
+?area={{ product.taxonomy | slugify }}
+  ?area=familie-og-barn&taxonomy=pengestotte
+
 
 {% block content %}
-
   <main class="min-h-[50vh]">
     <div class="grid grid-cols-layout">
       <div class="pt-12 pb-8 col-content">
-        <a href="/produktoversikt" class="font-semibold tracking-wide text-blue-500 uppercase hover:underline">Søknad og skjema fra A til Å</a>
+
+        <a href="/produktoversikt/?area={{ product.area | slugify }}&taxonomy={{ product.taxonomy | slugify }}" class="font-semibold tracking-wide text-blue-500 uppercase hover:underline">Søknad og skjema fra A til Å</a>
         <h1 class="mt-1 text-5xl font-semibold">{{ product.title | safe }}</h1>
         {% if ingress %}
         <div class="mt-4 text-lg max-w-prose">
