Justering av luft

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,10 +4,10 @@
 
 @layer base {
   :root {
-    --_layout-gap: clamp(0.75rem, 0.5rem + 2vw, 6rem);
+    --_layout-gap: clamp(0.75rem, 0.5rem + 3vw, 6rem);
     --_layout-full: minmax(var(--_layout-gap), 1fr);
     --_layout-feature: minmax(0, 6.5rem);
-    --_layout-content: min(64rem, 100% - (var(--_layout-gap) * 2));
+    --_layout-content: min(40rem + 32vw, 100% - (var(--_layout-gap) * 2));
   }
   a {
     text-decoration-thickness: 0.0875rem;
